[package]
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
name = "rsdocs-dashing"
categories = ["development-tools"]
description = "Tool to prepare rsdocs for dashing, in order to generate docsets"
keywords = ["docset", "dashing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/rsdocs-dashing"
version = "0.1.0"

[dependencies]
copy_dir = "0.1.2"
docopt = "0.8.1"
glob = "0.2.11"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
